--- a/CoreDataDemo/Base.lproj/Main.storyboard
+++ b/CoreDataDemo/Base.lproj/Main.storyboard
@@ -47,15 +47,25 @@
                                     <action selector="saveButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eg7-Td-qH1"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yDm-Xq-Gb6">
+                                <rect key="frame" x="87" y="471.5" width="240" height="127"/>
+                                <color key="backgroundColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Mwq-ew-TiD"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="8AQ-JK-T02" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="9FY-UM-kLL"/>
                             <constraint firstItem="1fz-ef-fYP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="9bm-NZ-6Za"/>
+                            <constraint firstItem="yDm-Xq-Gb6" firstAttribute="top" secondItem="IfY-vW-teK" secondAttribute="bottom" constant="53" id="F6h-tn-V8V"/>
                             <constraint firstItem="IfY-vW-teK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Gz9-tK-hEF"/>
                             <constraint firstItem="IfY-vW-teK" firstAttribute="top" secondItem="1fz-ef-fYP" secondAttribute="bottom" constant="110" id="QbN-Zj-0Pl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yDm-Xq-Gb6" secondAttribute="trailing" constant="87" id="QpR-rq-d4E"/>
                             <constraint firstItem="1fz-ef-fYP" firstAttribute="top" secondItem="8AQ-JK-T02" secondAttribute="bottom" constant="44" id="WDM-nF-ULA"/>
+                            <constraint firstItem="yDm-Xq-Gb6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="eWX-4d-oPr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1fz-ef-fYP" secondAttribute="trailing" constant="30" id="fgh-Nu-UBc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IfY-vW-teK" secondAttribute="trailing" constant="40" id="hcy-cb-2dZ"/>
                             <constraint firstItem="8AQ-JK-T02" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="mv6-gE-Yc3"/>
@@ -73,6 +83,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
